started outling the section background and work to eliminate gap between background image sections.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <Head>
     <title>Taylor Stobinski</title>
-
+    <link href="stylesheet.css" rel="stylesheet">
 </Head>
 <body>
     <main>
@@ -21,21 +21,24 @@
         </section>
 
 <!------------- Bio Section of Page ------------->
-        <section id="bio">
-            <h3 class="section_headers">Bio</h3>
-            <p class="section_information">
-                A native of the Toledo, Ohio metropolitan area, Taylor Stobinski is an active cellist frequently performing, teaching, and studio recording in the greater Boston area. 
-            </p>
-            <p class="section_information">
-                As an educator, Stobinski currently serves on the faculty at the Rivers School Conservatory in their Suzuki Cello Program and the faculty for Suzuki Institute of Boston as their Cello Instructor and Program Director.  Additionally, Stobinski has served as faculty at several music schools and youth programs such as the Toledo Symphony Suzuki School of Music, Detroit Symphony WFA Youth Orchestras, Black Swamp Fine Arts School, and the Boston Landmarks.
-            </p>
-            <p class="section_information">
-                In addition to his teaching, Stobinski enjoys an active career as a performer and recording artist. He has recorded on projects both national and international ranging from chamber and orchestral groups to solos in film, pop, and game scores. Currently, Stobinski serves as the Principal Cellist of the Rivers Symphony Orchestra. Stobinski previously served as the quartet cellist of the Lima Symphony in addition to holding membership. He also served as the Principal Cellist for the Perrysburg Symphony Orchestra, and performed with the Sono Novo Chamber Ensemble, Adrian Symphony, and Toledo Symphony Chamber Music Series.
-            </p>
-            <p class="section_information">
-                Stobinski earned his Master of Music in performance from Boston Conservatory at Berklee and previously obtained his Bachelors of Music in performance from Bowling Green State University. His primary teachers include Rhonda Rider, Alan Smith, Robert Clemens, and Brian Snow. Additionally, he has worked with Nancy Hair, Andrea Yun, and Mark Mutter in earning his Suzuki training.
-            </p>
-        </section>
+        <wrapper id="bio">
+            <section id="bio_background">
+                <h3 class="section_headers">Bio</h3>
+                <img id="bio_pic" src="Media/Color (7 of 20).jpg" alt="Photo of Taylor Stobinski posing with his cello"
+                <p class="section_information">
+                    A native of the Toledo, Ohio metropolitan area, Taylor Stobinski is an active cellist frequently performing, teaching, and studio recording in the greater Boston area. 
+                </p>
+                <p class="section_information">
+                    As an educator, Stobinski currently serves on the faculty at the Rivers School Conservatory in their Suzuki Cello Program and the faculty for Suzuki Institute of Boston as their Cello Instructor and Program Director.  Additionally, Stobinski has served as faculty at several music schools and youth programs such as the Toledo Symphony Suzuki School of Music, Detroit Symphony WFA Youth Orchestras, Black Swamp Fine Arts School, and the Boston Landmarks.
+                </p>
+                <p class="section_information">
+                    In addition to his teaching, Stobinski enjoys an active career as a performer and recording artist. He has recorded on projects both national and international ranging from chamber and orchestral groups to solos in film, pop, and game scores. Currently, Stobinski serves as the Principal Cellist of the Rivers Symphony Orchestra. Stobinski previously served as the quartet cellist of the Lima Symphony in addition to holding membership. He also served as the Principal Cellist for the Perrysburg Symphony Orchestra, and performed with the Sono Novo Chamber Ensemble, Adrian Symphony, and Toledo Symphony Chamber Music Series.
+                </p>
+                <p class="section_information">
+                    Stobinski earned his Master of Music in performance from Boston Conservatory at Berklee and previously obtained his Bachelors of Music in performance from Bowling Green State University. His primary teachers include Rhonda Rider, Alan Smith, Robert Clemens, and Brian Snow. Additionally, he has worked with Nancy Hair, Andrea Yun, and Mark Mutter in earning his Suzuki training.
+                </p>
+            </section>
+        </wrapper>
 
 <!------------- Teaching Section of Page ------------->
         <section id="teaching">
