rotated one of the background images to better use black-space in image for text later, started testing/reseaching how to remove white borders along CSS background images or HTML based backgroup images using the z-index positioning .

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
         <section id="home">
             <h1>Taylor Stobinski</h1>
             <h2>Cellist | Instructor | Recording Artist</h2>
-
+            
         </section>
 
 <!------------- Bio Section of Page ------------->
         <wrapper id="bio">
             <section id="bio_background">
                 <h3 class="section_headers">Bio</h3>
+                <img id="bio_pic_background" src="Media/Color (15 of 20).jpg" alt="picture of Taylor's cello">
                 <img id="bio_pic" src="Media/Color (7 of 20).jpg" alt="Photo of Taylor Stobinski posing with his cello"
                 <p class="section_information">
                     A native of the Toledo, Ohio metropolitan area, Taylor Stobinski is an active cellist frequently performing, teaching, and studio recording in the greater Boston area. 
