updated files removing typos and several errors.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 </Head>
 <body>
     <main>
-        <nav>
-            <a id="home">Home</a>
-            <a id="bio">Bio</a>
-            <a id="teaching">Teaching</a>
-            <a id="contact">Contact</a>
+        <nav id="nav_menu">
+            <a id="home" class="nav_links">Home</a>
+            <a id="bio" class="nav_links">Bio</a>
+            <a id="teaching" class="nav_links">Teaching</a>
+            <a id="contact" class="nav_links">Contact</a>
             <!-- <a id="more">More</a> -->
         </nav>
     
