Updated HTML to be cleaned from testing with elements. Managed to eliminate the gaps on the sides of the background images through changing the margin of the body element to 0 rem. Still need to eliminate the gap between the background images.

--- a/index.html
+++ b/index.html
@@ -5,43 +5,38 @@
 </Head>
 <body>
     <main>
-        <nav id="nav_menu">
-            <a id="home" class="nav_links">Home</a>
-            <a id="bio" class="nav_links">Bio</a>
-            <a id="teaching" class="nav_links">Teaching</a>
-            <a id="contact" class="nav_links">Contact</a>
-            <!-- <a id="more">More</a> -->
-        </nav>
-    
-<!------------- Home Section of Page ------------->
+        <!------------- Home Section of Page ------------->
         <section id="home">
-            <h1>Taylor Stobinski</h1>
-            <h2>Cellist | Instructor | Recording Artist</h2>
-            
+                <nav id="nav_menu">
+                    <a id="home" class="nav_links">Home</a>
+                    <a id="bio" class="nav_links">Bio</a>
+                    <a id="teaching" class="nav_links">Teaching</a>
+                    <a id="contact" class="nav_links">Contact</a>
+                    <!-- <a id="more">More</a> -->
+                </nav>        
+                <h1>Taylor Stobinski</h1>
+                <h2>Cellist | Instructor | Recording Artist</h2>
         </section>
 
-<!------------- Bio Section of Page ------------->
-        <wrapper id="bio">
-            <section id="bio_background">
-                <h3 class="section_headers">Bio</h3>
-                <img id="bio_pic_background" src="Media/Color (15 of 20).jpg" alt="picture of Taylor's cello">
-                <img id="bio_pic" src="Media/Color (7 of 20).jpg" alt="Photo of Taylor Stobinski posing with his cello"
-                <p class="section_information">
-                    A native of the Toledo, Ohio metropolitan area, Taylor Stobinski is an active cellist frequently performing, teaching, and studio recording in the greater Boston area. 
-                </p>
-                <p class="section_information">
-                    As an educator, Stobinski currently serves on the faculty at the Rivers School Conservatory in their Suzuki Cello Program and the faculty for Suzuki Institute of Boston as their Cello Instructor and Program Director.  Additionally, Stobinski has served as faculty at several music schools and youth programs such as the Toledo Symphony Suzuki School of Music, Detroit Symphony WFA Youth Orchestras, Black Swamp Fine Arts School, and the Boston Landmarks.
-                </p>
-                <p class="section_information">
-                    In addition to his teaching, Stobinski enjoys an active career as a performer and recording artist. He has recorded on projects both national and international ranging from chamber and orchestral groups to solos in film, pop, and game scores. Currently, Stobinski serves as the Principal Cellist of the Rivers Symphony Orchestra. Stobinski previously served as the quartet cellist of the Lima Symphony in addition to holding membership. He also served as the Principal Cellist for the Perrysburg Symphony Orchestra, and performed with the Sono Novo Chamber Ensemble, Adrian Symphony, and Toledo Symphony Chamber Music Series.
-                </p>
-                <p class="section_information">
-                    Stobinski earned his Master of Music in performance from Boston Conservatory at Berklee and previously obtained his Bachelors of Music in performance from Bowling Green State University. His primary teachers include Rhonda Rider, Alan Smith, Robert Clemens, and Brian Snow. Additionally, he has worked with Nancy Hair, Andrea Yun, and Mark Mutter in earning his Suzuki training.
-                </p>
-            </section>
-        </wrapper>
+        <!------------- Bio Section of Page ------------->
+        <section id="bio_background">
+            <h3 class="section_headers">Bio</h3>
+            <img id="bio_pic" src="Media/Color (7 of 20).jpg" alt="Photo of Taylor Stobinski posing with his cello"
+            <p class="section_information">
+                A native of the Toledo, Ohio metropolitan area, Taylor Stobinski is an active cellist frequently performing, teaching, and studio recording in the greater Boston area. 
+            </p>
+            <p class="section_information">
+                As an educator, Stobinski currently serves on the faculty at the Rivers School Conservatory in their Suzuki Cello Program and the faculty for Suzuki Institute of Boston as their Cello Instructor and Program Director.  Additionally, Stobinski has served as faculty at several music schools and youth programs such as the Toledo Symphony Suzuki School of Music, Detroit Symphony WFA Youth Orchestras, Black Swamp Fine Arts School, and the Boston Landmarks.
+            </p>
+            <p class="section_information">
+                In addition to his teaching, Stobinski enjoys an active career as a performer and recording artist. He has recorded on projects both national and international ranging from chamber and orchestral groups to solos in film, pop, and game scores. Currently, Stobinski serves as the Principal Cellist of the Rivers Symphony Orchestra. Stobinski previously served as the quartet cellist of the Lima Symphony in addition to holding membership. He also served as the Principal Cellist for the Perrysburg Symphony Orchestra, and performed with the Sono Novo Chamber Ensemble, Adrian Symphony, and Toledo Symphony Chamber Music Series.
+            </p>
+            <p class="section_information">
+                Stobinski earned his Master of Music in performance from Boston Conservatory at Berklee and previously obtained his Bachelors of Music in performance from Bowling Green State University. His primary teachers include Rhonda Rider, Alan Smith, Robert Clemens, and Brian Snow. Additionally, he has worked with Nancy Hair, Andrea Yun, and Mark Mutter in earning his Suzuki training.
+            </p>
+        </section>
 
-<!------------- Teaching Section of Page ------------->
+        <!------------- Teaching Section of Page ------------->
         <section id="teaching">
             <h3 class="section_headers">Teaching</h3>
             <p class="section_information">
@@ -69,6 +64,7 @@
             </p>
         </section>
 
+        <!------------- Footer ------------->
         <footer>
             <a id="footer_button">Contact Me</a>
             <p id="footer_text">© Taylor Stobinski. All right reserved.</p>
