Updated stylesheet so each section has the proper background image. removed unneeded code from elements that was not affecting look of website. Update the HTML file so id's of sections is more consistant.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <main>
         <!------------- Home Section of Page ------------->
-        <section id="home">
+        <section id="home_section">
                 <nav id="nav_menu">
                     <a id="home" class="nav_links">Home</a>
                     <a id="bio" class="nav_links">Bio</a>
@@ -19,7 +19,7 @@
         </section>
 
         <!------------- Bio Section of Page ------------->
-        <section id="bio_background">
+        <section id="bio_section">
             <h3 class="section_headers">Bio</h3>
             <img id="bio_pic" src="Media/Color (7 of 20).jpg" alt="Photo of Taylor Stobinski posing with his cello"
             <p class="section_information">
@@ -37,7 +37,7 @@
         </section>
 
         <!------------- Teaching Section of Page ------------->
-        <section id="teaching">
+        <section id="teaching_section">
             <h3 class="section_headers">Teaching</h3>
             <p class="section_information">
                 My philosophy as a teacher is to instill the importance of a solid foundation in technique and artistry to all of my students, regardless of age and ability level. I believe by learning the basic tools and various methods of playing, any student can thrive as a musician at the highest levels of artistry. 
@@ -51,7 +51,7 @@
         </section>
 
         <!------------- Contact Section of Page ------------->
-        <section id="contact">
+        <section id="contact_section">
             <h3 class="section_headers">Contact Me</h3>
             <p>
                 I Would love to hear from you!
