Fixed white gap between sections with negative margins. Fixed nav links up top to scroll to id's of each section of page.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <!------------- Home Section of Page ------------->
         <section id="home_section">
                 <nav id="nav_menu">
-                    <a id="home" class="nav_links">Home</a>
-                    <a id="bio" class="nav_links">Bio</a>
-                    <a id="teaching" class="nav_links">Teaching</a>
-                    <a id="contact" class="nav_links">Contact</a>
+                    <a id="home" class="nav_links" href="#home_section" >Home</a>
+                    <a id="bio" class="nav_links" href="#bio_section" >Bio</a>
+                    <a id="teaching" class="nav_links" href="#teaching_section" >Teaching</a>
+                    <a id="contact" class="nav_links" href="#contact_section" >Contact</a>
                     <!-- <a id="more">More</a> -->
                 </nav>        
                 <h1>Taylor Stobinski</h1>
