finished styling the footer for mobile and desktop versions. Fixed main nav bar at top to stay fixed and styled it.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         <!------------- Home Section of Page ------------->
         <section id="home_section">
                 <nav id="nav_menu">
-                    <a id="home" class="nav_links" href="#home_section" >Home</a>
-                    <a id="bio" class="nav_links" href="#bio_section" >Bio</a>
-                    <a id="teaching" class="nav_links" href="#teaching_section" >Teaching</a>
-                    <a id="contact" class="nav_links" href="#contact_section" >Contact</a>
-                    <!-- <a id="more">More</a> -->
+                    <ul>
+                        <li><a id="home" class="nav_links" href="#home_section" >Home</a></li>
+                        <li><a id="bio" class="nav_links" href="#bio_section" >Bio</a></li>
+                        <li><a id="teaching" class="nav_links" href="#teaching_section" >Teaching</a></li>
+                        <li><a id="contact" class="nav_links" href="#contact_section" >Contact</a></li>
+                    </ul>
                 </nav>        
                 <h1>Taylor Stobinski</h1>
                 <h2>Cellist | Instructor | Recording Artist</h2>
@@ -66,10 +67,12 @@
         </section>
 
         <!------------- Footer ------------->
-        <footer>
-            <a id="footer_button">Contact Me</a>
+        <footer id="footer">
+            <div id="footer_button_wrapper">
+                <a id="footer_button" href="mailto:cello@taylorstobinski.com" >Contact Me</a>
+            </div>
             <p id="footer_text">© Taylor Stobinski. All right reserved.</p>
-            <p>Photographer: Rebekah Kroesing</p>
+            <p>Photographer: Rebekah Kroesing</p>        
         </footer>
     </main>
 </body>
