made changes to background images with CSS and background-blend-mode attributes to ease reading of text, starting positioning and sizing text on pages closer to final look, finished the footer and menu for first version of mobile website.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                     </ul>
                 </nav>        
                 <h1>Taylor Stobinski</h1>
-                <h2>Cellist | Instructor | Recording Artist</h2>
+                <h2>Cellist | </h2>
+                <h2>Instructor |</h2> 
+                <h2>Recording Artist |</h2>
         </section>
 
         <!------------- Bio Section of Page ------------->
