updated teaching section of page with styling of home and bio pages. Working on getting background image to not blow up past viewport. Updated all section descriptions to match the home and bio sections.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
             <p class="section_information bio_information">
                 Stobinski earned his Master of Music in performance from Boston Conservatory at Berklee and previously obtained his Bachelors of Music in performance from Bowling Green State University. His primary teachers include Rhonda Rider, Alan Smith, Robert Clemens, and Brian Snow. Additionally, he has worked with Nancy Hair, Andrea Yun, and Mark Mutter in earning his Suzuki training.
             </p>
+            <br>
+            <br>
+            <div class="contact_button_wrapper">
+                <a class="contact_button" href="mailto:cello@taylorstobinski.com" >Contact Me</a>
+            </div>
         </section>
 
         <!------------- Teaching Section of Page ------------->
@@ -57,13 +62,13 @@
         <!------------- Contact Section of Page ------------->
         <section id="contact_section">
             <h3 class="section_headers">Contact Me</h3>
-            <p>
+            <p class="section_information contact_information"> 
                 I Would love to hear from you!
             </p>
-            <p class="section_information">
+            <p class="section_information contact_information">
                 Please feel free to contact me if you are interested in performances, teaching, or any other possible collaborations. I will promptly reply to the best of my ability. I would the opportunity to work with you!
             </p>
-            <p>
+            <p class="section_information contact_information">
                 Cello@TaylorStobinski.com
             </p>
         </section>
