changed site font style, worked on adjusting sizing or backgrounds and placements of sections, updated main menu font/size, otehr styles changes.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <section id="home_section">
                 <nav id="nav_menu">
                     <ul>
-                        <li><a id="home" class="nav_links" href="#home_section" >Home</a></li>
-                        <li><a id="bio" class="nav_links" href="#bio_section" >Bio</a></li>
-                        <li><a id="teaching" class="nav_links" href="#teaching_section" >Teaching</a></li>
-                        <li><a id="contact" class="nav_links" href="#contact_section" >Contact</a></li>
+                        <li><a id="home" class="nav_links" href="#home_section" >HOME</a></li>
+                        <li><a id="bio" class="nav_links" href="#bio_section" >BIO</a></li>
+                        <li><a id="teaching" class="nav_links" href="#teaching_section" >TEACHING</a></li>
+                        <li><a id="contact" class="nav_links" href="#contact_section" >CONTACT</a></li>
                     </ul>
                 </nav>        
                 <h1>Taylor Stobinski</h1>
