redesigned how css @media selectors would work by making devices sized between two values to avoid inheritance issues, started redoing sizing of different device widths

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <h3 class="section_headers">Bio</h3>
             <img id="bio_pic" src="Media/Color (7 of 20).jpg" alt="Photo of Taylor Stobinski posing with his cello">
             <p class="section_information bio_information">
-                A native of the Toledo, Ohio metropolitan area, Taylor Stobinski is an active cellist frequently performing, teaching, and studio recording in the greater Boston area. 
+                A native of the Toledo, Ohio metropolitan area, Taylor Stobinski is an active cellist frequently performing, teaching, and recording in the greater Boston area. 
             </p>
             <p class="section_information bio_information">
-                As an educator, Stobinski currently serves on the faculty at the Rivers School Conservatory in their Suzuki Cello Program and the faculty for Suzuki Institute of Boston as their Cello Instructor and Program Director.  Additionally, Stobinski has served as faculty at several music schools and youth programs such as the Toledo Symphony Suzuki School of Music, Detroit Symphony WFA Youth Orchestras, Black Swamp Fine Arts School, and the Boston Landmarks.
+                As an educator, Stobinski currently serves on the faculty at the Rivers School Conservatory teaching Suzuki Cello, Tradition Cello, and Chamber Music. Additionally, Stobinski has served as faculty at several music schools and youth programs such as the Toledo Symphony Suzuki School of Music, Detroit Symphony WFA Youth Orchestras, Black Swamp Fine Arts School, and the Boston Landmarks, Suzuki Institute of Boston, and currently maintains a private studio since 2011.
             </p>
             <p class="section_information bio_information">
-                In addition to his teaching, Stobinski enjoys an active career as a performer and recording artist. He has recorded on projects both national and international ranging from chamber and orchestral groups to solos in film, pop, and game scores. Currently, Stobinski serves as the Principal Cellist of the Rivers Symphony Orchestra. Stobinski previously served as the quartet cellist of the Lima Symphony in addition to holding membership. He also served as the Principal Cellist for the Perrysburg Symphony Orchestra, and performed with the Sono Novo Chamber Ensemble, Adrian Symphony, and Toledo Symphony Chamber Music Series.
+                In addition to his teaching, Stobinski enjoys an active career as a performer and recording artist. He has recorded on projects both national and international ranging from chamber and orchestral groups to solos in film, pop, and game scores. Currently, Stobinski serves as the Principal Cellist of the New England Film Orchestra and Orchestra Without Boundaries. Stobinski previously served as the quartet cellist of the Lima Symphony in addition to holding membership. He also served as the Principal Cellist for the Perrysburg Symphony Orchestra, and performed with the Sono Novo Chamber Ensemble, Adrian Symphony, and Toledo Symphony Chamber Music Series.
             </p>
             <p class="section_information bio_information">
                 Stobinski earned his Master of Music in performance from Boston Conservatory at Berklee and previously obtained his Bachelors of Music in performance from Bowling Green State University. His primary teachers include Rhonda Rider, Alan Smith, Robert Clemens, and Brian Snow. Additionally, he has worked with Nancy Hair, Andrea Yun, and Mark Mutter in earning his Suzuki training.
@@ -49,13 +49,10 @@
         <section id="teaching_section">
             <h3 class="section_headers">Teaching</h3>
             <p class="section_information teaching_information">
-                My philosophy as a teacher is to instill the importance of a solid foundation in technique and artistry to all of my students, regardless of age and ability level. I believe by learning the basic tools and various methods of playing, any student can thrive as a musician at the highest levels of artistry. 
+                My philosophy as a teacher is to instill the importance of a continuous learning mindset in a positive environment, regardless of age and ability level. I believe by learning the tools and various methods of practice through playing, that any student can thrive as a musician and use these methods to achieve mastery in any application. 
             </P>
             <p class="section_information teaching_information">
-                The core of my focus as a teacher is to develop individualized methods of teaching for each student. Every person has their own specific way of learning and unique personality. I believe it is my duty to learn how to teach someone as much as it is the students' duty to learn how to play. Habits of controlled tone production, rhythmic precision, accurate intonation, sensitivity, and expression are the basic building blocks of my philosophy. 
-            </P>
-            <p class="section_information teaching_information">
-                As a teacher, I have Suzuki training and I have had the opportunity to teach students in many setting, ages, and backgrounds. I have served on faculty positions at many schools, public and private, and worked with many types of chamber and orchestral ensembles.
+                The core of my focus as a teacher is to develop individualized methods of teaching for each student. Every person has their own specific way of learning and unique personality. I believe it is my duty to learn how to teach someone as much as it is the student's duty to learn how to play. Habits of controlled tone production, rhythmic precision, accurate intonation, sensitivity, and expression are some the basic building blocks of my philosophy. 
             </P>
             
         </section>
@@ -63,11 +60,8 @@
         <!------------- Contact Section of Page ------------->
         <section id="contact_section">
             <h3 class="section_headers">Contact Me</h3>
-            <p class="section_information contact_information"> 
-                I Would love to hear from you!
-            </p>
             <p class="section_information contact_information">
-                Please feel free to contact me if you are interested in performances, teaching, or any other possible collaborations. I will promptly reply to the best of my ability. I would the opportunity to work with you!
+                Please feel free to contact me if you are interested in performances, lessons, or any other types of collaborations. I will promptly reply to the best of my ability.
             </p>
             <br>
             <br>
