adding css grid to header elements for section to center content better, setting up change of background in bio section.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
         <!------------- Bio Section of Page ------------->
         <section id="bio_section">
-            <h3 class="section_headers">Bio</h3>
+            <div id="bio_header_wrapper">
+                <span></span>
+                <h3 class="section_headers">Bio</h3>
+            </div>
             <img id="bio_pic" src="Media/Color (7 of 20).jpg" alt="Photo of Taylor Stobinski posing with his cello">
             <p class="section_information bio_information">
                 A native of the Toledo, Ohio metropolitan area, Taylor Stobinski is an active cellist frequently performing, teaching, and recording in the greater Boston area. 
@@ -47,7 +50,10 @@
 
         <!------------- Teaching Section of Page ------------->
         <section id="teaching_section">
-            <h3 class="section_headers">Teaching</h3>
+            <div id="teaching_header_wrapper">
+                <h3 class="section_headers">Teaching</h3>
+                <span></span>
+            </div>
             <p class="section_information teaching_information">
                 My philosophy as a teacher is to instill the importance of a continuous learning mindset in a positive environment, regardless of age and ability level. I believe by learning the tools and various methods of practice through playing, that any student can thrive as a musician and use these methods to achieve mastery in any application. 
             </P>
@@ -61,7 +67,7 @@
         <section id="contact_section">
             <h3 class="section_headers">Contact Me</h3>
             <p class="section_information contact_information">
-                Please feel free to contact me if you are interested in performances, lessons, or any other types of collaborations. I will promptly reply to the best of my ability.
+                Please feel free to contact me if you are interested in performances, lessons, or any other types of collaborations.
             </p>
             <br>
             <br>
