--- a/index.html
+++ b/index.html
@@ -26,21 +26,26 @@
         <section id="bio_section">
             <div id="bio_header_wrapper">
                 <span></span>
-                <h3 class="section_headers">Bio</h3>
+                <h3 id="bio_header" class="section_headers">Bio</h3>
             </div>
-            <img id="bio_pic" src="Media/Color (7 of 20).jpg" alt="Photo of Taylor Stobinski posing with his cello">
-            <p class="section_information bio_information">
-                A native of the Toledo, Ohio metropolitan area, Taylor Stobinski is an active cellist frequently performing, teaching, and recording in the greater Boston area. 
-            </p>
-            <p class="section_information bio_information">
-                As an educator, Stobinski currently serves on the faculty at the Rivers School Conservatory teaching Suzuki Cello, Tradition Cello, and Chamber Music. Additionally, Stobinski has served as faculty at several music schools and youth programs such as the Toledo Symphony Suzuki School of Music, Detroit Symphony WFA Youth Orchestras, Black Swamp Fine Arts School, and the Boston Landmarks, Suzuki Institute of Boston, and currently maintains a private studio since 2011.
-            </p>
-            <p class="section_information bio_information">
-                In addition to his teaching, Stobinski enjoys an active career as a performer and recording artist. He has recorded on projects both national and international ranging from chamber and orchestral groups to solos in film, pop, and game scores. Currently, Stobinski serves as the Principal Cellist of the New England Film Orchestra and Orchestra Without Boundaries. Stobinski previously served as the quartet cellist of the Lima Symphony in addition to holding membership. He also served as the Principal Cellist for the Perrysburg Symphony Orchestra, and performed with the Sono Novo Chamber Ensemble, Adrian Symphony, and Toledo Symphony Chamber Music Series.
-            </p>
-            <p class="section_information bio_information">
-                Stobinski earned his Master of Music in performance from Boston Conservatory at Berklee and previously obtained his Bachelors of Music in performance from Bowling Green State University. His primary teachers include Rhonda Rider, Alan Smith, Robert Clemens, and Brian Snow. Additionally, he has worked with Nancy Hair, Andrea Yun, and Mark Mutter in earning his Suzuki training.
-            </p>
+            <div id="bio_content_wrapper">
+                <img id="bio_pic" src="Media/Color (7 of 20).jpg" alt="Photo of Taylor Stobinski posing with his cello">
+                <article>
+                    <p class="section_information bio_information">
+                        A native of the Toledo, Ohio metropolitan area, Taylor Stobinski is an active cellist frequently performing, teaching, and recording in the greater Boston area. 
+                        </p>
+                        <p class="section_information bio_information">
+                        As an educator, Stobinski currently serves on the faculty at the Rivers School Conservatory teaching Suzuki Cello, Tradition Cello, and Chamber Music. Additionally, Stobinski has served as faculty at several music schools and youth programs such as the Toledo Symphony Suzuki School of Music, Detroit Symphony WFA Youth Orchestras, Black Swamp Fine Arts School, and the Boston Landmarks, Suzuki Institute of Boston, and currently maintains a private studio since 2011.
+                        </p>
+                        <p class="section_information bio_information">
+                        In addition to his teaching, Stobinski enjoys an active career as a performer and recording artist. He has recorded on projects both national and international ranging from chamber and orchestral groups to solos in film, pop, and game scores. Currently, Stobinski serves as the Principal Cellist of the New England Film Orchestra and Orchestra Without Boundaries. Stobinski previously served as the quartet cellist of the Lima Symphony in addition to holding membership. He also served as the Principal Cellist for the Perrysburg Symphony Orchestra, and performed with the Sono Novo Chamber Ensemble, Adrian Symphony, and Toledo Symphony Chamber Music Series.
+                        </p>
+                        <p class="section_information bio_information">
+                        Stobinski earned his Master of Music in performance from Boston Conservatory at Berklee and previously obtained his Bachelors of Music in performance from Bowling Green State University. His primary teachers include Rhonda Rider, Alan Smith, Robert Clemens, and Brian Snow. Additionally, he has worked with Nancy Hair, Andrea Yun, and Mark Mutter in earning his Suzuki training.
+                        </p>
+                </article>
+            </div>
+            
             <br>
             <br>
             <div class="contact_button_wrapper">
