finalized mobile version, made major changes to site for table resolutions, began desktop version of site.

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 <h3 id="bio_header" class="section_headers">Bio</h3>
             </div>
             <div id="bio_content_wrapper">
-                <img id="bio_pic" src="Media/Color (7 of 20).jpg" alt="Photo of Taylor Stobinski posing with his cello">
+                <img id="mobile_bio_pic" src="Media/Color (7 of 20).jpg" alt="Photo of Taylor Stobinski posing with his cello">
                 <article>
                     <p class="section_information bio_information">
                         A native of the Toledo, Ohio metropolitan area, Taylor Stobinski is an active cellist frequently performing, teaching, and recording in the greater Boston area. 
                         </p>
                         <p class="section_information bio_information">
-                        As an educator, Stobinski currently serves on the faculty at the Rivers School Conservatory teaching Suzuki Cello, Tradition Cello, and Chamber Music. Additionally, Stobinski has served as faculty at several music schools and youth programs such as the Toledo Symphony Suzuki School of Music, Detroit Symphony WFA Youth Orchestras, Black Swamp Fine Arts School, and the Boston Landmarks, Suzuki Institute of Boston, and currently maintains a private studio since 2011.
+                        As an educator, Stobinski currently serves on the faculty at the Rivers School Conservatory teaching Suzuki Cello, Tradition Cello, and Chamber Music. Additionally, Stobinski has served as faculty at several music schools and youth programs such as the Toledo Symphony Suzuki School of Music, Detroit Symphony WFA Youth Orchestras, Black Swamp Fine Arts School, Suzuki Institute of Boston, and currently maintains a private studio since 2011.
                         </p>
                         <p class="section_information bio_information">
                         In addition to his teaching, Stobinski enjoys an active career as a performer and recording artist. He has recorded on projects both national and international ranging from chamber and orchestral groups to solos in film, pop, and game scores. Currently, Stobinski serves as the Principal Cellist of the New England Film Orchestra and Orchestra Without Boundaries. Stobinski previously served as the quartet cellist of the Lima Symphony in addition to holding membership. He also served as the Principal Cellist for the Perrysburg Symphony Orchestra, and performed with the Sono Novo Chamber Ensemble, Adrian Symphony, and Toledo Symphony Chamber Music Series.
@@ -72,7 +72,7 @@
         <section id="contact_section">
             <h3 class="section_headers">Contact Me</h3>
             <p class="section_information contact_information">
-                Please feel free to contact me if you are interested in performances, lessons, or any other types of collaborations.
+                Please feel free to contact me if you are interested in performances, recording, or lessons.
             </p>
             <br>
             <br>
