fixed spelling error in footer, added brightness filter on mobile images, fixed font in button to match rest of site.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div id="footer_button_wrapper">
                 <a id="footer_button" href="mailto:cello@taylorstobinski.com" >Contact Me</a>
             </div>
-            <p id="footer_text">© Taylor Stobinski. All right reserved.</p>
+            <p id="footer_text">© Taylor Stobinski. All rights reserved.</p>
             <p>Photographer: Rebekah Kroesing</p>        
         </footer>
     </main>
